<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pjatk.pl.bicycles.view.activity.CreateBicycleActivity">

    <ScrollView
        android:id="@+id/bicycle_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/new_bicycle_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/name"
                    android:text="@string/bicycle_name"/>
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/description"
                    android:text="@string/bicycle_description"/>
                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/price"
                    android:text="@string/bicycle_price"/>

                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/price"
                    android:text="@string/bicycle_picture"/>

                <EditText
                    android:id="@+id/picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/save_bicycle_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/save"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
